# workmate_test_task

./: .env.example  README.md
backend/: Dockerfile  pyproject.toml  setup.cfg
backend/api/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/data/: breeds.csv  cats.csv
backend/api/management/commands/: clear_db.py  load_data.py
backend/api/migrations/: 0001_initial.py  0002_cat_owner.py  0003_alter_breed_title.py  0004_alter_rating_unique_together.py
backend/api/tests/: test_breeds.py  test_cats.py
backend/backend/: constants.py  settings.py  urls.py
backend/users/: serializers.py  urls.py  views.py
backend/users/tests/: test_users.py
gateway/: docker-compose.yml
